/*
 * $Id: ChangeLog,v 1.2909 2004/05/10 00:58:46 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-10 05:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/dbgmenu.prg
  * source/debug/debugger.prg
  * source/debug/tbrwtext.prg
    ! Fixes and improvements to debugger commands and script file operations.

2004-05-09 22:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/pp/pptable.c
    ! minor fix to @ tbrowse command(tbreader require 4 parameters, was reciving 3 with was blowing get system

2004-05-09 17:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
    ! Corrected HB_LL() definition for BCC

2004-05-10 01:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/str.c
    - moved HB_POINTER2STRING and HB_STRING2POINTER to separate
      file str2ptr.c
  + xharbour/source/rtl/str2ptr.c
    + HB_POINTER2STRING and HB_STRING2POINTER from str.c changed
      to operate on HB_IT_POINTER instead of HB_IT_LONG

  * xharbour/hrbdll.bc
  * xharbour/hrbdll.vc
  * xharbour/hrbdll.wc
  * xharbour/makefile.bc
  * xharbour/makefile.nt
  * xharbour/makefile.vc
  * xharbour/makefile.wc
  * xharbour/source/rtl/Makefile
    * added str2ptr.c

  * xharbour/source/vm/arrayshb.c
    * changed to operate on HB_IT_POINTER instead of HB_IT_LONG

  * xharbour/source/vm/runner.c
    * use HB_PCODE_MK* macros
    * changed to operate on HB_IT_POINTER instead of HB_IT_LONG
      still prgFunction and hb_hrbAsm*() functions are for IA32
      machines only and not portable (implemented) to any other

  * xharbour/include/hbdefs.h
    + new macro HB_LL to resolve the problem with MSC which doesn't
      support LL suffix for LONGLONG numeric constant. This suffix
      is necessary for some compilers - without it they cut the
      number to LONG
